# sorowill-contracts

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md
.github/ISSUE_TEMPLATE/: high.md  medium.md  trivial.md
.github/workflows/: deploy-testnet.yml  test.yml
contracts/will/: Cargo.toml
contracts/will/src/: errors.rs  events.rs  lib.rs  storage.rs  test.rs  types.rs
deployments/: testnet.json
