[package]
name = "will"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "SoroWill: trustless on-chain inheritance and dead man's switch protocol for Stellar Soroban"
repository = "https://github.com/SoroWill/sorowill-contracts"

[lib]
crate-type = ["cdylib", "rlib"]
doctest = false

[dependencies]
soroban-sdk = { workspace = true }

[dev-dependencies]
soroban-sdk = { workspace = true, features = ["testutils"] }

[features]
testutils = ["soroban-sdk/testutils"]
